--- a/src/web/admin.html
+++ b/src/web/admin.html
@@ -256,9 +256,12 @@
                     </span>
                 </template>
             </div>
-            <input type="text" placeholder="Enter npub or hex pubkey and press Enter"
-                @keydown.enter.prevent="addSimplePubkey($event)"
-                class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+            <div class="flex gap-2">
+                <input type="text" placeholder="Enter npub or hex pubkey"
+                    @keydown.enter.prevent="addSimplePubkey($event)"
+                    class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <button type="button" @click="addSimplePubkey({ target: $el.previousElementSibling })" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+            </div>
         </div>
 
         <!-- Error -->
@@ -343,8 +346,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="text" placeholder="Enter pubkey and press Enter" @keydown.enter.prevent="addTag($event, form.write_allowed_pubkeys)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="text" placeholder="Enter pubkey" @keydown.enter.prevent="addTag($event, form.write_allowed_pubkeys)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addTag({ target: $el.previousElementSibling }, form.write_allowed_pubkeys)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
 
             <div class="mb-4" x-data="tagInput()">
@@ -357,8 +363,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="text" placeholder="Enter pubkey and press Enter" @keydown.enter.prevent="addTag($event, form.write_blocked_pubkeys)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="text" placeholder="Enter pubkey" @keydown.enter.prevent="addTag($event, form.write_blocked_pubkeys)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addTag({ target: $el.previousElementSibling }, form.write_blocked_pubkeys)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
 
             <div x-data="tagInput()">
@@ -372,8 +381,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="text" placeholder="Enter pubkey and press Enter" @keydown.enter.prevent="addTag($event, form.write_tagged_pubkeys)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="text" placeholder="Enter pubkey" @keydown.enter.prevent="addTag($event, form.write_tagged_pubkeys)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addTag({ target: $el.previousElementSibling }, form.write_tagged_pubkeys)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
         </div>
 
@@ -398,8 +410,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="text" placeholder="Enter pubkey and press Enter" @keydown.enter.prevent="addTag($event, form.read_allowed_pubkeys)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="text" placeholder="Enter pubkey" @keydown.enter.prevent="addTag($event, form.read_allowed_pubkeys)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addTag({ target: $el.previousElementSibling }, form.read_allowed_pubkeys)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
         </div>
 
@@ -417,8 +432,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="number" placeholder="Enter kind number and press Enter" @keydown.enter.prevent="addNumTag($event, form.allowed_kinds)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="number" placeholder="Enter kind number" @keydown.enter.prevent="addNumTag($event, form.allowed_kinds)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addNumTag({ target: $el.previousElementSibling }, form.allowed_kinds)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
 
             <div class="mb-4" x-data="tagInput()">
@@ -431,8 +449,11 @@
                         </span>
                     </template>
                 </div>
-                <input type="number" placeholder="Enter kind number and press Enter" @keydown.enter.prevent="addNumTag($event, form.blocked_kinds)"
-                    class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                <div class="flex gap-2">
+                    <input type="number" placeholder="Enter kind number" @keydown.enter.prevent="addNumTag($event, form.blocked_kinds)"
+                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-gray-600">
+                    <button type="button" @click="addNumTag({ target: $el.previousElementSibling }, form.blocked_kinds)" class="bg-gray-800 border border-gray-700 hover:border-gray-500 text-gray-300 hover:text-white rounded-lg px-3 py-2 text-sm transition">Add</button>
+                </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4">
