chore: remove old admin panel and update development docs
Remove the embedded Alpine.js admin panel (src/web/admin.html) and its
route, since the admin UI is now the standalone Next.js app on port
8888. Update the login page on :443 to no longer redirect to /admin.

Update README with local development setup instructions for both Docker
(docker-compose.dev.yml) and bare-metal workflows. Remove completed
items from the roadmap.

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -58,7 +58,9 @@
                 });
 
                 if (res.ok) {
-                    window.location.href = '/admin';
+                    app.error = '';
+                    document.querySelector('button').textContent = 'Logged in ✓';
+                    document.querySelector('button').disabled = true;
                 } else {
                     app.error = 'Login failed: ' + await res.text();
                 }
